# yosai_intel_dashboard_fresh

./: .coveragerc  .dockerignore  .env  .env.example  .env.production.example  .env.test  .flake8  .gitattributes  .gitignore  .golangci.yml  .hadolint.yaml  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .stylelintrc.json  .trivyignore  .wsgi_get_logger_snippet.py  A.py  B.py  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.analytics  Dockerfile.event-processor  Dockerfile.fixed  Dockerfile.gateway  Dockerfile.ingestion  Dockerfile.model-serving  Dockerfile.prod  Dockerfile.production  LICENSE  MIGRATION_COMPLETED.md  Makefile  README-DOCKER.md  README.md  RUNBOOK.md  STEP_19_COMPLETED.md  STEP_20_FINAL_ACCURATE.md  STEP_20_TESTING.md  add_missing_upload_protocols.py  (+255 more)
.github/: dependabot.yml  labels.yml  renovate.json
adapters/: service_client.py
analysis/: unified_analyzer.py
analytics/: __init__.py  access_trends.py  analytics_controller.py  anomaly_detection.py  business_service.py  chunked_analytics_controller.py  context_providers.py  context_storage.py  data_repository.py  db_interface.py  feature_extraction.py  file_processing_utils.py  flink_jobs.py  integration_guide.py  interactive_charts.py  risk_scoring.py  risk_scoring_model.py  security_metrics.py  security_patterns.py  security_score_calculator.py  ui_controller.py  unique_patterns_analyzer.py  upload_processor.py  user_behavior.py  utils.py
analytics_core/: __init__.py  centralized_analytics_manager.py
analyzers/: __init__.py  ast_analyzer.py  base_analyzer.py  style_analyzer.py
api/: .dockerignore  Dockerfile  README.md  __init__.py  adapter.py  adapter.py.bak2  analytics_endpoints.py  analytics_router.py  api_app.py  callbacks_endpoint.py  main.py  plugin_performance.py  requirements.txt  risk_scoring.py  settings_endpoint.py  spec.py  start_api.py
api-gateway/: go.mod  main.go
archive/: find_legacy_files.py
assets/: dashboard.css  modal_focus.js  navbar_sync.js  theme.js  upload_progress_sse.js
backend/: app.py  app_main.py  requirements.txt
callback_audit_results/: audit_report.txt
callback_tests/: conftest.py  test_file_upload_module_split.py  test_security_callback_controller.py  test_upload_callbacks_split.py
cleanup_backup/: complete_callback_cleanup.py  migrate_callbacks.py  unicode_cleanup.py  unicode_processor.py
cli/: feature_flags.py  query_optimizer.py
components/: __init__.py  advanced_upload.py  column_verification.py  device_verification.py  file_preview.py  file_upload_component.py  layout_factory.py  plugin_adapter.py  plugin_performance_dashboard.py  simple_device_mapping.py  streamlined_callback_manager.py  streamlined_component.py  ui_builder.py  ui_component.py  ui_settings.py  unified_settings_callbacks.py
config/: __init__.py  app_config.py  base.py  base_config.py  base_loader.py  cache_config.py  cache_manager.py  circuit-breakers.yaml  complete_service_registration.py  config.py  config.yaml  config_loader.py  (+38 more)
services/analytics_microservice/: Dockerfile  analytics_service.py  app.py  async_queries.py  docker-compose.yml  pyproject.toml  requirements.txt  unicode_middleware.py
services/analytics_microservice/src/api/: middleware.py  routes.py
services/analytics_microservice/src/core/: __init__.py  dependencies.py  events.py
services/analytics_microservice/tests/: conftest.py  test_endpoints_async.py  test_events.py  test_startup.py
yosai_intel_dashboard/src/services/analytics_microservice/: analytics_service.py  app.py  async_queries.py  model_loader.py  pyproject.toml  queries.py  security.py  unicode_middleware.py
yosai_intel_dashboard/src/services/analytics_microservice/tests/: conftest.py  test_endpoints_async.py  test_startup.py
yosai_intel_dashboard/src/services/event-ingestion/: Dockerfile  app.py  pyproject.toml  service_config.yaml
(+4243 files in other folders)
