[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
mypy_path = ["."]



[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = ".pyi?$"
extend-exclude = """
/(.direnv|.eggs|.git|.hg|.ipynb_checkpoints|.mypy_cache|.nox|.pytest_cache|.ruff_cache|.tox|.svn|.venv|.vscode|pypackages|_build|buck-out|build|dist|venv|config/generated)/
"""

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.poetry.scripts]
yosai-review = "file_processing.user_review:review"
diagnose-upload-config = "tools.diagnose_upload_config:main"

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.setuptools.packages.find]
# Include all runtime packages under ``src/``.
include = [
    "analytics",
    "cli",
    "intel_analysis_service",
    "core",
    "yosai_intel_dashboard",
    "yosai_intel_dashboard.*",
]

[tool.pydocstyle]
convention = "google"
