[project]
name = "analytics-service"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "asyncpg",
    "redis",
    "prometheus-fastapi-instrumentator",
    "python-jose",
    "opentelemetry-instrumentation-fastapi",
    "structlog",
    "pydantic",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
