[project]
name = "event-ingestion-service"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "kafka-python",
    "prometheus-fastapi-instrumentator",
    "opentelemetry-instrumentation-fastapi",
    "structlog",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
